# ProtSpace

./: .gitignore  README.md  preprocessing.py  processing.py  pyproject.toml  visualization.py
MichaelProject/: pdb2png.py
MichaelProject/example_input/: 3and6_3D_majorTaxon.html
TobiasScript/: scatterExample.py
conf/: 3FTx.yaml  3FTx_full.yaml  CTX.yaml  Pla2g2.yaml  Pla2g2_esm2_pdb.yaml  VA.yaml  conotoxins.yaml
data/: VA.csv  VA.h5  VA.html  data_structure.txt  df.csv
data/3FTx/: 3Dspace_MajorTaxon_ProtT5.html  3Dspace_MajorTaxon_esm2.html  3FTx.csv  3FTx.fasta  3FTx.h5  3FTx.ipynb  3FTx2.csv  3FTx_checkpoint8_a_renamed.nexus  3FTx_full.fasta  3FTx_full.fasta.fai  3FTx_full_prott5.h5  3FTx_mapped.csv  3FTx_mapped.fasta  3FTx_mapped.fasta.fai  3FTx_mature.fasta  3FTx_mature.fasta.fai  3FTx_mature_prott5.h5  3FTx_maure.fasta  3FTx_new.ipynb  3FTx_protT5.h5  blast_results.csv  df.csv  df_3FTx_esm2.csv  df_3FTx_full_esm2.csv  df_3FTx_full_prott5.csv  df_3FTx_mature_esm2.csv  df_3FTx_mature_prott5.csv  df_3FTx_protT5.csv  dset_3FTx.py  uniprot_helper.py
data/3FTx_full/: 3FTx.csv  3FTx.fasta  3FTx_.csv  3FTx_prott5.h5  df_3FTx_esm2.csv  df_3FTx_esm2_.csv
data/CTX/: 3Dplot_ctx_esm2.html  3Dplot_ctx_prott5.html  3Dspace_gene_superfamily_PCA.html  CTX.csv  (+17 more)
data_1/: VA.csv  df.csv
protspace3d/: app.py  callbacks.py  fasta_mapper.py  preprocessing.py  processing.py  visualization.py
script/: analyse_colabfold.ipynb  fasta_removeDash.ipynb  get_best_pdbs.py  parse_esm2_embs.py
src/: app.py  callbacks.py  preprocessing.py  structurecontainer.py  testing.py
(+3236 files in other folders)
