[tool.poetry]
name = "protspace3d"
version = "0.1.0"
description = "Development of a protein-embedding visualization tool."
authors = ["Anton Spannagl"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
jupyter-dash = "^0.4.2"
matplotlib = "^3.5.3"
seaborn = "^0.12.0"
numpy = "^1.23.3"
pandas = "^1.4.4"
h5py = "^3.7.0"
umap-learn = "^0.5.3"
plotly = "^5.10.0"
dash = "^2.6.1"
dash-bio = "^1.0.2"
pyfaidx = "^0.7.1"
llvmlite = "^0.39.1"
dash-bootstrap-components = "^1.3.0"
pyyaml = "^6.0"
kaleido = "0.2.1"


[tool.poetry.group.dev.dependencies]
black = "^22.8.0"
torch = "1.11"
jupyter-black = "^0.3.3"
venn = "^0.1.3"
openpyxl = "^3.0.10"
xmltramp2 = "^3.1.1"
tabulate = "^0.9.0"
distinctipy = "^1.2.2"
dash = {extras = ["testing"], version = "^2.8.1"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
